# econ-sim-poc

./: Anchor.toml  init.txt
app/: .env  package-lock.json  package.json
app/src/: App.css  App.js  index.js
app/src/components/: Navigation.css  Navigation.js
app/src/components/game/: Game.js
app/src/components/game/tiles/: AssignedWorkersTable.js  Tile.css  Tile.js  Tiles.js  tileTypesMapping.js  tileTypesToColor.js
app/src/components/workers/: MintWorker.js  SelectWorkerDropdown.js  Skill.css  Skill.js  Worker.js  Workers.js  skillTypesMapping.js  tileTypeToSkills.js
app/src/components/workers/tasks/: TaskProgressBar.js
app/src/game/: Game.js
app/src/game/tiles/: Tile.js  Tiles.js
app/src/gameLogic/: tileMath.js
app/src/idl/: econ_sim.json
app/src/providers/: EconSimProvider.js
app/src/util/: createMintInfo.js  uint8ArrayToString.js
programs/econ-sim-poc/: Cargo.toml
programs/econ-sim-poc/src/: lib.rs
programs/econ-sim-poc/src/game/: cycles.rs  mod.rs
programs/econ-sim-poc/src/resource_mints/: mod.rs
programs/econ-sim-poc/src/tiles/: hexagons.rs  mod.rs
programs/econ-sim-poc/src/workers/: mod.rs
tests/: createUiTest.ts  econ-sim-poc.ts
tests/types/: resourceTypes.js  tileTypes.js
tests/util/: createMintInfo.js  getRandomTileType.js
